--- a/_posts/2015-04-05-julia-index.html
+++ b/_posts/2015-04-05-julia-index.html
@@ -6,9 +6,24 @@ layout: langindex
 language: julia
 ---
 
-<h1 class="centered">Plotly Julia Library</h1>
-	<br>
-	
+
+<header class="--welcome">
+	<div class="--welcome-body">
+		<!--div.--wrap-inner-->
+		<div class="--title">
+			<div class="--category-img">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Julia_prog_language.svg/2000px-Julia_prog_language.svg.png" alt="">
+			</div>
+			<div class="--body">
+				<h1>Plotly Julia Library</h1>
+				<p>
+					{{page.description}}
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
+
 	<h2>Documentation Examples</h2>
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","julia"  | where:"has_thumbnail",true %}
 		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","julia" %}
