--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -6,8 +6,22 @@ layout: langindex
 language: matlab
 ---
 
-<h1 class="centered">MATLAB Online Graphing Toolbox</h1>
-<h4 class="centered">by plotly</h4>
+
+<header class="--welcome">
+	<div class="--welcome-body">
+		<!--div.--wrap-inner-->
+		<div class="--title">
+			<div class="--category-img"><img src="https://images.plot.ly/language-icons/api-home/matlab-logo.png" alt="Matlab Logo"></div>
+			<div class="--body">
+				<h1>MATLAB Online Graphing Toolbox</h1>
+				<span class="sub">By plotly</span>
+				<p>
+					{{page.description}}
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
 
     <div class="section">
         <div class="row auto-eg-padding">
