--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -6,8 +6,21 @@ layout: langindex
 language: matplotlib
 ---
 
-<h1 class="centered">Plotly Matplotlib Library</h1>
-<h3 class="centered">Publish your Matplotlib figures to the web with one line!</h3>
+<header class="--welcome">
+	<div class="--welcome-body">
+		<!--div.--wrap-inner-->
+		<div class="--title">
+			<div class="--category-img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Created_with_Matplotlib-logo.svg/2000px-Created_with_Matplotlib-logo.svg.png" alt="Matlab Logo"></div>
+			<div class="--body">
+				<h1>Plotly Matplotlib Library</h1>
+				<p>
+					{{page.description}}
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
+
     <div class="section">
         <div class="row auto-eg-padding">
 
