--- a/_posts/2015-04-05-node_js-index.html
+++ b/_posts/2015-04-05-node_js-index.html
@@ -5,9 +5,21 @@ description: Plotly's Nodejs graphing library makes interactive, publication-qua
 layout: langindex
 language: nodejs
 ---
+<header class="--welcome">
+	<div class="--welcome-body">
+		<!--div.--wrap-inner-->
+		<div class="--title">
+			<div class="--category-img"><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Node JS Logo"></div>
+			<div class="--body">
+				<h1>Plotly node.js Library</h1>
+				<p>
+					{{page.description}}
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
 
-
-	<h2>Documentation Examples</h2>
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","nodejs"  | where:"has_thumbnail",true %}
 		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","nodejs" %}
 
