--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -6,12 +6,23 @@ language: plotly_js
 layout: langindex
 redirect_from: /javascript-graphing-library/
 ---
-<div class="block-title">what is plotly.js?</div>
-<div style="width: 90%; margin-bottom: 30px;" class="block-content">
-    Built on top of d3.js and <a target="_blank" href="http://stack.gl">stack.gl</a>, plotly.js is a high-level, declarative charting library. plotly.js ships with 20 chart types, including 3D charts, statistical graphs, and SVG maps.
-    <br>Learn about <a href="https://plot.ly/javascript/open-source-announcement">why we open sourced plotly.js</a> or <a target="_blank" href="https://github.com/plotly/plotly.js">view the source on GitHub</a>.
-</div>
 
+<header class="--welcome">
+    <div class="--welcome-body">
+        <!--div.--wrap-inner-->
+        <div class="--title">
+            <div class="--category-img"><img src="https://plot.ly/gh-pages/documentation/static/images/python-small.png" style="margin-top: -30px;" alt=""></div>
+            <div class="--body">
+                <h1>What is plotly.js?</h1>
+                <p>
+                    Built on top of d3.js and <a target="_blank" href="http://stack.gl">stack.gl</a>, plotly.js is a high-level, declarative charting library. plotly.js ships with 20 chart types, including 3D charts, statistical graphs, and SVG maps.
+                    <br>Learn about <a href="https://plot.ly/javascript/open-source-announcement">why we open sourced plotly.js</a> or <a target="_blank" href="https://github.com/plotly/plotly.js">view the source on GitHub</a>.
+                </p>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="tutorial-content --tutorial-index --base">
 
 <div class="graph js-splash--responsive-chart-js" class="graph" style="height: 60vh;" id="my-graph"></div>
 <pre class="graph-code"><code class="js-splash--code-block">
@@ -235,12 +246,13 @@ Plotly.plot('my-graph', data, layout);
     <div class="js-splash--section-title">
         <div>examples</div>
     </div>
-    {% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
-    {% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","plotly_js" %}
-    {% include documentation_eg.html %}
+
 </div>
+</section>
 
-
+{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","plotly_js"  | where:"has_thumbnail",true | sort: "order" %}
+{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","plotly_js" %}
+{% include documentation_eg.html %}
 <script type="text/javascript">
     var windspeed = document.getElementById('wind-speed'),
         contour = document.getElementById('contour-plot'),
