--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -8,8 +8,20 @@ language: python
 has_thumbnail: false
 redirect_from: /python/ipython-notebooks/
 ---
-
-<h1>Plotly for IPython Notebooks</h1>
+<header class="--welcome">
+    <div class="--welcome-body">
+        <!--div.--wrap-inner-->
+        <div class="--title">
+            <div class="--category-img"><img src="http://www.scipy.org/_static/images/ipython.png" alt="ipython Logo"></div>
+            <div class="--body">
+                <h1>Plotly for IPython Notebooks</h1>
+                <p>
+                    {{page.description}}
+                </p>
+            </div>
+        </div>
+    </div>
+</header>
 
     <div class="row btnrow">
         <a href="/ipython-notebooks/" class="button no_underline">Getting Started</a>
