--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -6,14 +6,27 @@ language: pandas
 layout: langindex
 ---
 
-<h1 class="centered">Plotly Python Library for Pandas</h1>
-	
-	<div class="tipbox row">
-        Cufflinks binds plotly to pandas dataframes in <a href="https://plot.ly/ipython-notebooks/">IPython notebook</a>. <a href="https://plot.ly/ipython-notebooks/cufflinks/">Read more</a>
-	</div>
-	<br>
+<header class="--welcome">
+	<div class="--welcome-body">
+		<!--div.--wrap-inner-->
+		<div class="--title">
+			<div class="--category-img">
+				<img src="https://plot.ly/gh-pages/documentation/static/images/pandas-small.png" alt="{{page.name}}">
+			</div>
+			<div class="--body">
+				<h1>Plotly Python Library for Pandas</h1>
+				<p>
+					{{page.description}}
+				</p>
+				<p>
+					Cufflinks binds plotly to pandas dataframes in <a href="https://plot.ly/ipython-notebooks/">IPython notebook</a>. <a href="https://plot.ly/ipython-notebooks/cufflinks/">Read more</a>.
 
-	<h2>Documentation Examples</h2>
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
+
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","pandas"  | where:"has_thumbnail",true % | sort: "order" %}
 		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","pandas" %}
 
