--- a/_posts/python/getting-started/2015-06-30-getting-started.html
+++ b/_posts/python/getting-started/2015-06-30-getting-started.html
@@ -4,21 +4,12 @@ description: Getting Started with Plotly for Python
 name: Getting Started Plotly for Python
 has_thumbnail: false
 thumbnail: thumbnail/getting-started.jpg
-layout: getstart
+layout: base
 language: python
 title: Getting Started Plotly for Python
 page_type: u-guide
 ---
 {% raw %}
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Getting-Started:-Plotly-for-Python">Getting Started: Plotly for Python<a class="anchor-link" href="#Getting-Started:-Plotly-for-Python">&#182;</a></h1>
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
