--- a/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
+++ b/_posts/pandas/colorlover/2015-06-30-colorlover-with-pandas.html
@@ -1,5 +1,5 @@
 ---
-permalink: pandas/colorlover/
+permalink: pandas/colorlover
 description: How to easily add colorscales to pandas dataframe using Colorlover and Plotly.
 title: Pandas Adding Colorscales with Colorlover | plotly
 has_thumbnail: true
@@ -18,24 +18,21 @@ order: 5
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Adding-Colorscales-to-Pandas-DataFrames">Adding Colorscales to Pandas DataFrames<a class="anchor-link" href="#Adding-Colorscales-to-Pandas-DataFrames">&#182;</a></h2><p><code>Colorlover</code> is a great library for easily accessing the colorscales. We can use it to conveniently provide the colorscales for Plotly Charts. We will be using <a href="https://github.com/santosjorge/cufflinks"><code>cufflinks</code></a> library, which binds Plotly directly to pandas dataframes.</p>
+<h2 id="Adding-Colorscales-to-Pandas-DataFrames">Adding Colorscales to Pandas DataFrames<a class="anchor-link" href="#Adding-Colorscales-to-Pandas-DataFrames">&#182;</a></h2><p><code>Colorlover</code> is a great library for easily accessing colorscales. We can use it to conveniently provide the colorscales for Plotly Charts! We will be using the <a href="https://github.com/santosjorge/cufflinks"><code>cufflinks</code></a> library, which binds Plotly directly to pandas dataframes.</p>
 <p>To install Cufflinks:</p>
 
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="o">!</span> pip install cufflinks
-</pre></div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><code>$ pip install cufflinks</code></p>
 
 </div>
 </div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -47,18 +44,15 @@ order: 5
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="o">!</span>pip install colorlover
-</pre></div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><code>$ pip install colorlover</code></p>
 
 </div>
 </div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -100,7 +94,7 @@ order: 5
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>For example, To access all the colorscales with 9 colors:</p>
+<p>For example, to access all the colorscales with 9 colors:</p>
 
 </div>
 </div>
@@ -197,7 +191,7 @@ order: 5
 <div class="output_area"><div class="prompt output_prompt">Out[8]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/1847.embed" height="587px" width="1116px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11299.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -247,7 +241,7 @@ order: 5
 <div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/1857.embed" height="587px" width="1116px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11301.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -261,7 +255,7 @@ order: 5
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>List of all the colorscales supported by <code>colorlover</code> is available <a href="https://plot.ly/ipython-notebooks/color-scales/#All-colors" target="_blank">Here</a></p>
+<p>A list of all the colorscales supported by <code>colorlover</code> is available <a href="http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors" target="_blank">here!</a></p>
 
 </div>
 </div>
