--- a/_posts/user_guide_python/2015-06-30-bar_chart_stream.html
+++ b/_posts/user_guide_python/2015-06-30-bar_chart_stream.html
@@ -22,7 +22,7 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
@@ -34,9 +34,9 @@ title: Bar Chart Streaming
  
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>  
 
-<span class="n">stream_id</span> <span class="o">=</span> <span class="s">&#39;qoy4tt6x9w&#39;</span>   <span class="c">#this is the streaming token associated the account `kevintest`</span>
+<span class="n">stream_id</span> <span class="o">=</span> <span class="s">&#39;jkc6d90yfw&#39;</span>   
 
-<span class="c"># We can generate a new stream ob</span>
+<span class="c"># We can generate a new stream id object</span>
 <span class="n">stream</span> <span class="o">=</span> <span class="n">Stream</span><span class="p">(</span>
     <span class="n">token</span><span class="o">=</span><span class="n">stream_id</span><span class="p">,</span>  
     <span class="n">maxpoints</span><span class="o">=</span><span class="mi">80</span>
@@ -50,7 +50,7 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c">#A simple bar chart object is generated</span>
@@ -73,41 +73,26 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;bar_stream&#39;</span><span class="p">)</span>      <span class="c">#post this plot up onto the plotly servers</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;bar-chart-streaming&#39;</span><span class="p">)</span>      <span class="c">#post this plot up onto the plotly servers</span>
 </pre></div>
 
 </div>
 </div>
 </div>
 
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>u&apos;https://plot.ly/~kevintest/236&apos;</pre>
-</div>
-
-</div>
-
-</div>
-</div>
-
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c">#Now a Stream object is created w/ the same stream_id as the stream id object associated with our bar chart</span>
+<div class=" highlight hl-ipython2"><pre><span class="c">#Now a Stream object is created w/ the same stream_id as the stream id object</span>
+
 <span class="n">s</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">Stream</span><span class="p">(</span><span class="n">stream_id</span><span class="p">)</span>
-<span class="n">s</span><span class="o">.</span><span class="n">open</span><span class="p">()</span>                   <span class="c">#open a connection to start writing to the plot</span>
+<span class="n">s</span><span class="o">.</span><span class="n">open</span><span class="p">()</span>                  
 </pre></div>
 
 </div>
@@ -120,17 +105,13 @@ title: Bar Chart Streaming
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>    <span class="c"># a counter</span>
-<span class="n">N</span> <span class="o">=</span> <span class="mi">2000</span>  <span class="c"># number of points to be plotted</span>
-
-
-<span class="k">while</span> <span class="n">i</span><span class="o">&lt;</span><span class="n">N</span><span class="p">:</span>               
-    <span class="n">i</span> <span class="o">+=</span> <span class="mi">1</span>  
+<div class=" highlight hl-ipython2"><pre><span class="k">while</span> <span class="bp">True</span><span class="p">:</span>               
+    
     <span class="n">s</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="s">&#39;one&#39;</span><span class="p">,</span><span class="s">&#39;two&#39;</span><span class="p">,</span><span class="s">&#39;three&#39;</span><span class="p">,</span><span class="s">&#39;four&#39;</span><span class="p">,</span><span class="s">&#39;five&#39;</span><span class="p">],</span> <span class="n">y</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">random_integers</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">100</span><span class="p">,</span><span class="mi">5</span><span class="p">)))</span>  
 
-    <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>        <span class="c">#wait one second before plotting again</span>
+    <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mf">0.2</span><span class="p">)</span>        <span class="c">#wait one second before plotting again</span>
     
-<span class="n">s</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>                <span class="c">#close the stream</span>
+<span class="n">s</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>                  <span class="c">#close the stream</span>
 </pre></div>
 
 </div>
@@ -140,10 +121,10 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">tls</span><span class="o">.</span><span class="n">embed</span><span class="p">(</span><span class="s">&#39;https://plot.ly/~kevintest/236/bar-chart-streaming/&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">tls</span><span class="o">.</span><span class="n">embed</span><span class="p">(</span><span class="s">&#39;https://plot.ly/~streaming-demos/112/bar-chart-streaming/&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -154,10 +135,10 @@ title: Bar Chart Streaming
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[15]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~kevintest/236.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~streaming-demos/112.embed" height="525" width="100%"></iframe>
 </div>
 
 </div>
