--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -11,7 +11,7 @@ redirect_from: /javascript-graphing-library/
     <div class="--welcome-body">
         <!--div.--wrap-inner-->
         <div class="--title">
-            <div class="--category-img"><img src="https://plot.ly/gh-pages/documentation/static/images/python-small.png" style="margin-top: -30px;" alt=""></div>
+            <div class="--category-img"><img src="https://images.plot.ly/language-icons/api-home/js-logo.png" style="margin-top: -30px;" alt=""></div>
             <div class="--body">
                 <h1>What is plotly.js?</h1>
                 <p>
