ggplot2 layout changes
Updated ggplot2 page for layout options to not show thumbnails

--- a/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
+++ b/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
@@ -7,7 +7,7 @@ layout: base
 thumbnail: thumbnail/log.jpg
 language: ggplot2
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: false
 display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","yscale" | sort: "order" %}
