--- a/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
+++ b/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
@@ -2,12 +2,12 @@
 title: ggplot2 aes | Examples | Plotly
 name: aes
 permalink: ggplot2/aes/
-description: How assign aesthetics in ggplot2 and R
+description: How to assign aesthetics in ggplot2 and R
 layout: base
 thumbnail: thumbnail/aesthetics_image.png
 language: ggplot2
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: false
 display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","aes" | sort: "order" %}
