--- a/_posts/ggplot2/Faceting/facet_wrap/2015-07-14-facet_wrap_index.html
+++ b/_posts/ggplot2/Faceting/facet_wrap/2015-07-14-facet_wrap_index.html
@@ -7,7 +7,7 @@ layout: base
 thumbnail: thumbnail/facet_wrap.jpg
 language: ggplot2
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: false
 display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","wrap" | sort: "order" %}
