--- a/_posts/ggplot2/Theme/axis.ticks/2016-01-27-Themes_axisticks_index.html
+++ b/_posts/ggplot2/Theme/axis.ticks/2016-01-27-Themes_axisticks_index.html
@@ -7,7 +7,7 @@ layout: base
 thumbnail: thumbnail/theme_image3.png
 language: ggplot2
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: false
 display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","axis.ticks" | sort: "order" %}
