--- a/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
+++ b/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
@@ -7,7 +7,7 @@ layout: base
 thumbnail: thumbnail/time-series.jpg
 language: ggplot2
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: false
 display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","ggplot2" | where:"suite","scale_x_date" | sort: "order" %}
