--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -8,24 +8,10 @@ language: python
 has_thumbnail: false
 redirect_from: /python/ipython-notebooks/
 ---
-<header class="--welcome">
-    <div class="--welcome-body">
-        <!--div.--wrap-inner-->
-        <div class="--title">
-            <div class="--category-img"><img src="http://www.scipy.org/_static/images/ipython.png" alt="ipython Logo"></div>
-            <div class="--body">
-                <h1>Plotly for IPython Notebooks</h1>
-                <p>
-                    {{page.description}}
-                </p>
-            </div>
-        </div>
-    </div>
-</header>
 
     <div class="row btnrow">
-        <a href="/ipython-notebooks/" class="button no_underline">Getting Started</a>
-        <a href="/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
+        <a href="/ipython-notebooks/" class="button">Getting Started</a>
+        <a href="/ipython-notebooks/gallery" class="button">Notebook Gallery</a>
     </div>
 
     <h2>Getting started</h2>
