--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -6,28 +6,8 @@ permalink: /api/
 
 <!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <!-- Stytlesheets -->
-    <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/styles/main.css">
-    <!-- Fonts -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/plotly_icons.css"/>
-
-    <!-- Icon -->
-    <link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon"/>
-
-    <!-- META TAGS -->
-    {% include _new/_page-components/_seo.html %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-
-</head>
-
+{% include head.html %}
 
 <body>
 {% include _new/_page-components/_header-main.html %}
