--- a/_posts/user_guide_python/2015-06-30-bar_chart_stream.html
+++ b/_posts/user_guide_python/2015-06-30-bar_chart_stream.html
@@ -22,7 +22,7 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
@@ -76,7 +76,7 @@ title: Bar Chart Streaming
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;bar-chart-streaming&#39;</span><span class="p">)</span>      <span class="c">#post this plot up onto the plotly servers</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;bar-chart&#39;</span><span class="p">)</span>      <span class="c">#post this plot up onto the plotly servers</span>
 </pre></div>
 
 </div>
@@ -121,10 +121,10 @@ title: Bar Chart Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">tls</span><span class="o">.</span><span class="n">embed</span><span class="p">(</span><span class="s">&#39;https://plot.ly/~streaming-demos/112/bar-chart-streaming/&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">tls</span><span class="o">.</span><span class="n">embed</span><span class="p">(</span><span class="s">&#39;https://plot.ly/~streaming-demos/116/bar-chart-streaming/&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -135,10 +135,10 @@ title: Bar Chart Streaming
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[15]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~streaming-demos/112.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~streaming-demos/116.embed" height="525" width="100%"></iframe>
 </div>
 
 </div>
