Matlab/mpl examples

--- a/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
+++ b/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
@@ -1,5 +1,5 @@
 ---
-name: Simple Annotation with the <code>annotate</code> method
+name: Simple Annotation Example with the <code>annotate</code> method
 plot_url: https://plot.ly/~PlotBot/85
 arrangement: horizontal
 language: matplotlib
