Added colorbar, and grid spacing example

--- a/_posts/matplotlib/labels/2016-02-17-mpl-legend-custom.html
+++ b/_posts/matplotlib/labels/2016-02-17-mpl-legend-custom.html
@@ -1,5 +1,5 @@
 ---
-name: Setting Custom Legend
+name: Example custom Legend with Font Size and border
 arrangement: horizontal
 language: matplotlib
 suite: labels
