--- a/_posts/matplotlib/subplots/2015-04-09-mpl-simple-subplot.html
+++ b/_posts/matplotlib/subplots/2015-04-09-mpl-simple-subplot.html
@@ -1,5 +1,5 @@
 ---
-name: matplotlib's <code>subplot</code> command
+name: matplotlib's <code>subplot</code> command ( Multiple Plots on Same Figure)
 plot_url: https://plot.ly/~tarzzz/1240
 arrangement: horizontal
 language: matplotlib
@@ -14,7 +14,7 @@ import plotly.plotly as py
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-ig = plt.figure()
+fig = plt.figure()
 
 ax1 = fig.add_subplot(221)
 ax1.plot([1,2,3,4,5], [10,5,10,5,10], 'r-')
