--- a/_posts/user_guide_python/2015-06-30-new_py_guide.html
+++ b/_posts/user_guide_python/2015-06-30-new_py_guide.html
@@ -501,4 +501,36 @@ Hence,</p>
 <h3 id="Issues-and-Questions">Issues and Questions<a class="anchor-link" href="#Issues-and-Questions">&#182;</a></h3>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>So you've developed a better understanding of Plotly now, and you're starting to create cooler plots and visualizations for different projects you're working on. If you ever happen to get stuck wtih certain use cases or features in Plotly, you can let us know at our <strong><a href="http://community.plot.ly">Community Forums</a></strong>. Moreover if you sign up for a Pro Plan, we also offer e-mail and intercom support as well. Finally if you think you've caught a bug or if something just doesn't function the way it should, you can create an issue on our <strong><a href="https://github.com/plotly/plotly.py/issues">Github Repo</a></strong>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+
+</div>
+</div>
 </div>{% endraw %}
