More examples added

--- a/_posts/matplotlib/axes/2016-02-15-setting-axes-limits.html
+++ b/_posts/matplotlib/axes/2016-02-15-setting-axes-limits.html
@@ -1,5 +1,5 @@
 ---
-name: Setting Axes Limits
+name: Setting Axes Fixed Range with Xlim and Ylim
 plot_url: https://plot.ly/~tarzzz/1310
 arrangement: horizontal
 language: matplotlib
