--- a/_posts/matplotlib/axes/2016-02-22-axes_ticks.html
+++ b/_posts/matplotlib/axes/2016-02-22-axes_ticks.html
@@ -1,5 +1,5 @@
 ---
-name: Setting the XTICKS and YTicks Font size and angle
+name: XTICKS and YTicks Format, Font size and rotation
 plot_url: https://plot.ly/~tarzzz/1380
 arrangement: horizontal
 language: matplotlib
