minor update in violin plot

--- a/_posts/python/violin-plot/2015-06-30-Violin-Plot-Plotly.html
+++ b/_posts/python/violin-plot/2015-06-30-Violin-Plot-Plotly.html
@@ -5,7 +5,7 @@ title: Python Violin Plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/violin-plot.jpg
 layout: user-guide
-name: Your-Tutorial-Chart
+name: Violin Plots
 language: python
 display_as: statistical
 has_thumbnail: true
