--- a/_posts/python/violin-plot/2015-06-30-Violin-Plot-Plotly.html
+++ b/_posts/python/violin-plot/2015-06-30-Violin-Plot-Plotly.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/violin-plot
+permalink: python/violin-plot/
 description: How to make Violun Charts in Python with Plotly.
 title: Python Violin Plots | plotly
 has_thumbnail: true
