--- a/_posts/python/violin-plot/2015-06-30-violin-plot.html
+++ b/_posts/python/violin-plot/2015-06-30-violin-plot.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/violin-plot/
-description: How to make Violun Charts in Python with Plotly.
+description: How to make Violin Charts in Python with Plotly.
 title: Python Violin Plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/violin-plot.jpg
@@ -29,7 +29,7 @@ order: 5
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Violin plot is a trace that  visually encodes the distribution of a data set, along with its  summary statistics.
 It displays the graph of the estimated probability density function (pdf) mirrored about y-axis, and inside the violin-like shaped region,  the elements of a box plot (median, lower and upper quartile,   whisker position).</p>
-<p>In this Jupyter Notebook we define the functions to get the  Plotly plot of a  violin plot. We  add the option to overlay onto the same axis the rug plot of the data set, in order to get more insights into its distributional properties.</p>
+<p>In this Jupyter Notebook we define  functions to get the  Plotly plot of a  violin plot. In order to get more insights into distributional properties we  add the option to overlay onto the same axis the rug plot of the data set.</p>
 
 </div>
 </div>
@@ -144,14 +144,14 @@ It displays the graph of the estimated probability density function (pdf) mirror
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="k">def</span> <span class="nf">make_half_violin</span><span class="p">(</span> <span class="n">x</span><span class="p">,</span>  <span class="n">y</span><span class="p">,</span>  <span class="n">fillcolor</span><span class="o">=</span><span class="s">&#39;#1f77b4&#39;</span><span class="p">,</span> <span class="n">linecolor</span><span class="o">=</span><span class="s">&#39;rgb(50,50,50)&#39;</span><span class="p">):</span> 
+<div class=" highlight hl-ipython2"><pre><span class="k">def</span> <span class="nf">make_half_violin</span><span class="p">(</span> <span class="n">x</span><span class="p">,</span>  <span class="n">y</span><span class="p">,</span>  <span class="n">fillcolor</span><span class="o">=</span><span class="s">&#39;#1f77b4&#39;</span><span class="p">,</span>  <span class="n">linecolor</span><span class="o">=</span><span class="s">&#39;rgb(50,50,50)&#39;</span><span class="p">):</span> 
     <span class="n">text</span><span class="o">=</span><span class="p">[</span><span class="s">&#39;(pdf(y), y)=(&#39;</span><span class="o">+</span><span class="s">&#39;{:0.2f}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">x</span><span class="p">[</span><span class="n">i</span><span class="p">])</span><span class="o">+</span><span class="s">&#39;, &#39;</span><span class="o">+</span><span class="s">&#39;{:0.2f}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">y</span><span class="p">[</span><span class="n">i</span><span class="p">])</span><span class="o">+</span><span class="s">&#39;)&#39;</span>
           <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">x</span><span class="p">))]</span> 
     <span class="k">return</span> <span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">x</span><span class="p">,</span> 
                    <span class="n">y</span><span class="o">=</span><span class="n">y</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s">&#39;lines&#39;</span><span class="p">,</span>
                    <span class="n">name</span><span class="o">=</span><span class="s">&#39;&#39;</span><span class="p">,</span>
                    <span class="n">text</span><span class="o">=</span><span class="n">text</span><span class="p">,</span>
-                   <span class="n">fill</span><span class="o">=</span><span class="s">&#39;tozerox&#39;</span><span class="p">,</span>
+                   <span class="n">fill</span><span class="o">=</span><span class="s">&#39;tonextx&#39;</span><span class="p">,</span> 
                    <span class="n">fillcolor</span><span class="o">=</span> <span class="n">fillcolor</span><span class="p">,</span>
                    <span class="n">line</span><span class="o">=</span><span class="n">Line</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">linecolor</span><span class="p">,</span> <span class="n">shape</span><span class="o">=</span><span class="s">&#39;spline&#39;</span><span class="p">),</span>
                    <span class="n">hoverinfo</span><span class="o">=</span><span class="s">&#39;text&#39;</span><span class="p">,</span>
@@ -435,10 +435,10 @@ of the form <code>range=[-a,a]</code> or of the form <code>[-b,a]</code>, when a
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;empet&#39;</span><span class="p">,</span> <span class="s">&#39;my_api_key&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;tarzzz&#39;</span><span class="p">,</span> <span class="s">&#39;j31379xjqh&#39;</span><span class="p">)</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Violin-Plot-Example&#39;</span><span class="p">)</span>
 </pre></div>
 
@@ -450,7 +450,7 @@ of the form <code>range=[-a,a]</code> or of the form <code>[-b,a]</code>, when a
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[14]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[16]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2014.embed" height="450px" width="350px"></iframe>
@@ -475,7 +475,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">seed</span><span class="p">(</span><span class="mi">619517</span><span class="p">)</span>
@@ -498,7 +498,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[16]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[17]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <div>
@@ -559,7 +559,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">gb</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">groupby</span><span class="p">([</span><span class="s">&#39;Group&#39;</span><span class="p">])</span>
@@ -584,7 +584,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[18]:</div>
+<div class="prompt input_prompt">In&nbsp;[19]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="n">L</span><span class="p">,</span>  <span class="n">shared_yaxes</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> 
@@ -625,10 +625,10 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="prompt input_prompt">In&nbsp;[20]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">violet_colors</span><span class="o">=</span><span class="p">[</span><span class="s">&#39;#604d9e&#39;</span><span class="p">,</span><span class="s">&#39;#6c4774&#39;</span><span class="p">,</span><span class="s">&#39;#9e70a2&#39;</span><span class="p">,</span><span class="s">&#39;#caaac2&#39;</span><span class="p">,</span><span class="s">&#39;#d6c7dd&#39;</span><span class="p">]</span><span class="c">#violet palette</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">violet_colors</span><span class="o">=</span><span class="p">[</span><span class="s">&#39;#604d9e&#39;</span><span class="p">,</span><span class="s">&#39;#6c4774&#39;</span><span class="p">,</span><span class="s">&#39;#9e70a2&#39;</span><span class="p">,</span><span class="s">&#39;#caaac2&#39;</span><span class="p">,</span><span class="s">&#39;#d6c7dd&#39;</span><span class="p">]</span>
 </pre></div>
 
 </div>
@@ -648,7 +648,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="prompt input_prompt">In&nbsp;[21]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="k">for</span> <span class="n">k</span><span class="p">,</span> <span class="n">gr</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">group_name</span><span class="p">):</span>
@@ -668,7 +668,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">pl_width</span><span class="o">=</span><span class="mi">900</span>
@@ -698,10 +698,10 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[23]:</div>
+<div class="prompt input_prompt">In&nbsp;[24]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;empet&#39;</span><span class="p">,</span> <span class="s">&#39;my_api_key&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;tarzzz&#39;</span><span class="p">,</span> <span class="s">&#39;j31379xjqh&#39;</span><span class="p">)</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Multiple-Violins&#39;</span><span class="p">)</span>
 </pre></div>
 
@@ -713,7 +713,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[23]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[24]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2016.embed" height="500px" width="900px"></iframe>
