--- a/_posts/python/violin-plot/2015-06-30-violin-plot.html
+++ b/_posts/python/violin-plot/2015-06-30-violin-plot.html
@@ -1,6 +1,6 @@
 ---
-permalink: python/violin-plot/
-description: How to make Violin Charts in Python with Plotly.
+permalink: python/violin-plot
+description: How to make Violun Charts in Python with Plotly.
 title: Python Violin Plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/violin-plot.jpg
@@ -438,7 +438,7 @@ of the form <code>range=[-a,a]</code> or of the form <code>[-b,a]</code>, when a
 <div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;tarzzz&#39;</span><span class="p">,</span> <span class="s">&#39;j31379xjqh&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;empet&#39;</span><span class="p">,</span> <span class="s">&#39;my_api_key&#39;</span><span class="p">)</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Violin-Plot-Example&#39;</span><span class="p">)</span>
 </pre></div>
 
@@ -701,7 +701,7 @@ In the following  we generate  a few data sets and  their violin plots:</p>
 <div class="prompt input_prompt">In&nbsp;[24]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;tarzzz&#39;</span><span class="p">,</span> <span class="s">&#39;j31379xjqh&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;empet&#39;</span><span class="p">,</span> <span class="s">&#39;my_api_key&#39;</span><span class="p">)</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Multiple-Violins&#39;</span><span class="p">)</span>
 </pre></div>
 
