Added matlab scatter examples

--- a/_posts/matlab/scatter_exclusive/2016-03-16-matlab-scatter-from-array.html
+++ b/_posts/matlab/scatter_exclusive/2016-03-16-matlab-scatter-from-array.html
@@ -1,6 +1,6 @@
 ---
-name: Scatter Plot from Array values
-plot_url: https://plot.ly/~PlotBot/
+name: Scatter Plot from Array values ( Discrete Points )
+plot_url: https://plot.ly/~tarzzz/2012
 arrangement: horizontal
 language: matlab
 suite: scatter_exclusive
