404 and ref page edits

--- a/404.html
+++ b/404.html
@@ -4,85 +4,36 @@ title: Plot Twist
 
 <!DOCTYPE html>
 <html>
-	{% include head.html %}
+<head>
+    {% include head.html %}
 
-	<body>
-<div id="header" style="
-  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  background-position: center top;
-  width: 100%;
-  height: 350px;
-  position: relative;
-  ">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
 
-	{% include header.html %}
-  <div style="
-    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
-    width: 100%;
-    height: 100%;
-  "></div>
-  
-    <!-- Lang Banner -->
-    {% include lang-splash-banner.html %}
+<body data-spy="scroll" data-target=".watch" style="position:relative;">
 
-</div>
+<!--[if lt IE 10]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
-	<div class="allcontent">
+{% include lang-splash-banner.html %}
 
-        <style>
-        .page404 {
-            margin: 0 auto;
-            text-align: center;
-            min-width: 260px;
-            color: #333;
-            padding: 50px;
-        }
-        .page404-heading {
-            color: #447ADB;
-            font-size: 100px;
-            font-weight: 800;
-            line-height: 100px;
-        }
-        .page404-bars {
-            background-color: #447ADB;
-            border-radius: 50%;
-            box-sizing: border-box;
-            display: inline-block;
-            height: 75px;
-            margin: 0 6px 10px 6px;
-            padding-bottom: 20px;
-            text-align: center;
-            vertical-align: bottom;
-            width: 75px;
-        }
-        .page404-bars svg {
-            margin-bottom: 30px;
-        }
-        .page404-txt {
-            font-weight: 300;
-        }
-        .page404-cta {
-            padding: 24px 0;
+{% include _new/_page-components/_header-main.html %}
 
-        }
-        .page404-cta p {
-            margin: 0;
-            line-height: 24px;
-            line-height: 1.5rem;
-        }
-        </style>
+<main class="--page page--single --index">
 
-	<div class="sectionseparator_bg">
-		<div class="container">
-		<div class="row">
-			<div class="getstartarea">
-				<div class="page404">
+    <div class="--wrap">
+        <!-- aside - Main Sidebar-->
+        <!-- Main-->
+        <section class="--page-body --full-width">
+
+            <section class="content">
+
+                <div class="page404">
                     <div class="page404-heading">
                         4<div class="page404-bars">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"     y="0px" width="40px" height="40px" viewBox="0 0 304.128 246.216" enable-background="new 0 0 304.128 246.216"
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"     y="0px" width="40px" height="40px" viewBox="0 0 304.128 246.216" enable-background="new 0 0 304.128 246.216"
                       xml:space="preserve">
                           <g>
                            <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFF"
@@ -122,22 +73,25 @@ title: Plot Twist
                                 c0.004,1.154-0.28,1.4-1.151,1.393C29.087,246.153,23.488,246.176,17.89,246.176z"/>
                         </g>
                        </svg>
-                       </div>4
-                      </div>
+                    </div>4
+                    </div>
 
 
                     <div class="page404-txt">
-                       <h3>Plot twist!</h3>
-                       <br />
-                       <h5>There's nothing here...</h5><br />
-                       <h5> <a href="http://help.plot.ly">Back to Plotly Help</a></h5>
-		            </div>
-		        </div>
-	        </div>
-	    </div>
-	</div>
-	</div>
-	</div>
-	{% include footer.html %}
-	</body>
+                        <h3>Plot twist!</h3>
+                        <br />
+                        <h5>There's nothing here...</h5><br />
+                        <h5> <a href="http://help.plot.ly">Back to Plotly Help</a></h5>
+                    </div>
+                </div>
+
+            </section>
+        </section>
+    </div>
+</main>
+{% include helpbox.html %}
+
+{% include _new/_page-components/_footer-main.html %}
+</body>
+
 </html>
