Added statistical toolbox examples

--- a/_posts/matlab/annotations/2015-04-09-simple-annotation.html
+++ b/_posts/matlab/annotations/2015-04-09-simple-annotation.html
@@ -1,5 +1,5 @@
 ---
-name: Simple Annotation
+name: Label Points - Simple Annotation
 plot_url: https://plot.ly/~PlotBot/19
 arrangement: horizontal
 language: matlab
