--- a/_posts/matlab/axes/2016-02-28-matlab-two-y-axes.html
+++ b/_posts/matlab/axes/2016-02-28-matlab-two-y-axes.html
@@ -1,5 +1,5 @@
 ---
-name: Plot Two Y Axis ( Multiple Axes )
+name: Plot Two Y Axis ( Secondary Axis )
 plot_url: https://plot.ly/~tarzzz/1660
 arrangement: horizontal
 language: matlab
