--- a/_posts/matlab/statistical-toolbox/2016-03-21-clustering-using-gaussian-mixture.html
+++ b/_posts/matlab/statistical-toolbox/2016-03-21-clustering-using-gaussian-mixture.html
@@ -3,8 +3,8 @@ name: Clustering Using Gaussian Mixture
 plot_url: https://plot.ly/~tarzzz/2078
 arrangement: horizontal
 language: matlab
-suite: mixed
-order: 2
+suite: statistical_toolbox
+order: 5
 sitemap: false
 description: Inspired from <a href="http://in.mathworks.com/help/stats/clustering-using-gaussian-mixture-models.html">Matlab Docs</a>
 ---
