--- a/_posts/matlab/statistical-toolbox/2016-03-21-contour-over-gaussian.html
+++ b/_posts/matlab/statistical-toolbox/2016-03-21-contour-over-gaussian.html
@@ -3,8 +3,8 @@ name: Contour Plot over Gaussian Distribution
 plot_url: https://plot.ly/~tarzzz/2084
 arrangement: horizontal
 language: matlab
-suite: contour
-order: 3
+suite: statistical_toolbox
+order: 2
 sitemap: false
 description: Inspired from <a href="http://stackoverflow.com/questions/10740145/creating-the-contour-plot-of-a-gaussian-distribution">Stack Overflow</a>
 ---
