--- a/_posts/matlab/subplots/2015-04-09-multiple-subplots.html
+++ b/_posts/matlab/subplots/2015-04-09-multiple-subplots.html
@@ -1,5 +1,5 @@
 ---
-name: Multiple Subplots
+name: Multiple Graphs on Same Figure
 plot_url: https://plot.ly/~PlotBot/24
 arrangement: horizontal
 language: matlab
