--- a/_posts/matlab/subplots/2015-04-09-simple-subplot.html
+++ b/_posts/matlab/subplots/2015-04-09-simple-subplot.html
@@ -1,5 +1,5 @@
 ---
-name: Simple Subplot
+name: Simple Subplot ( Multiple Graphs on Separate Axes)
 plot_url: https://plot.ly/~PlotBot/29
 arrangement: horizontal
 language: matlab
