--- a/_posts/matlab/statistical-toolbox/2016-03-21-matlab-normal-cdf.html
+++ b/_posts/matlab/statistical-toolbox/2016-03-21-matlab-normal-cdf.html
@@ -1,18 +1,21 @@
 ---
-name: Gaussian Distribution Over Histogram
-plot_url: https://plot.ly/~tarzzz/2080
+name: Normal Cumulative Distribution Function - <code>normcdf</code>
+plot_url: https://plot.ly/~tarzzz/2100
 arrangement: horizontal
 language: matlab
-suite: histogram
-order: 3
+suite: statistical_toolbox
+order: 2
 sitemap: false
 ---
 % Learn about API authentication here: https://plot.ly/matlab/getting-started
 % Find your api_key here: https://plot.ly/settings/api
 
-r = normrnd(10,1,100,1);
+mu = [0:0.1:20];
+
+
+X = normcdf(mu);
 fig = figure;
-histfit(r)
+plot(X)
 
 resp = fig2plotly(fig, 'strip',false)
 plotly_url = resp.url;
