api-index images on CDN

--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -16,9 +16,9 @@ permalink: /api/
     <div class="--wrap-top">
         <section class="hero">
             <div class="hero-bg">
-                <img src="/all_static/images/api-home-bg.jpg" data-depth="0.3" alt=""
+                <img src="https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/api/images/api-home-bg.jpg" data-depth="0.3" alt=""
                      class="layer">
-                <img src="/all_static/images/api-home-front.png" data-depth="0.1" alt=""
+                <img src="https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/api/images/api-home-front.png" data-depth="0.1" alt=""
                      class="layer">
             </div>
             <div class="--wrap-inner">
