More examples ( running out of commit messages)

--- a/_posts/matlab/annotations/2015-04-09-text-chart-styling.html
+++ b/_posts/matlab/annotations/2015-04-09-text-chart-styling.html
@@ -1,5 +1,5 @@
 ---
-name: Custom Text Color and Styling
+name: Custom Text Size, Text Color and Styling
 plot_url: https://plot.ly/~PlotBot/43
 arrangement: horizontal
 language: matlab
