Quadratic fit, line examples

--- a/_posts/matlab/line_exclusive/2016-02-28-matlab-horizontal-and-vertical-lines.html
+++ b/_posts/matlab/line_exclusive/2016-02-28-matlab-horizontal-and-vertical-lines.html
@@ -1,5 +1,5 @@
 ---
-name: MATLAB Horizntal lines, Vertical lines and Assymptotes
+name: MATLAB Horizontal lines, Vertical lines and Assymptotes
 plot_url: https://plot.ly/~tarzzz/1694
 arrangement: horizontal
 language: matlab
