changes to jekyll frontmatter

--- a/_posts/user_guide_python/2015-06-30-surface-subplots.html
+++ b/_posts/user_guide_python/2015-06-30-surface-subplots.html
@@ -1,14 +1,13 @@
 ---
 permalink: python/3d-surface-color-mapping/
-description: Surface Subplot Demo
-title: Surface Subplot Demo
+description: Coloring the Surface of 3d plots
+title: 3D Surface Color Mapping
 has_thumbnail: true
 thumbnail:
 has_thumbnail: false
 layout: user-guide
 page_type: u-guide
 language: python
-title: Surface Subplot Demo
 ---
 {% raw %}
 <div class="cell border-box-sizing code_cell rendered">
