update links to js libraries for api home

--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -223,10 +223,9 @@ permalink: /api/
 
 {% include _new/_page-components/_footer-main.html %}
 
-<!-- Image Hover Script -->
-<script src="/js/imghover.js"></script>
-<script src="http://matthew.wagerfield.com/parallax/assets/scripts/js/libraries.min.js"></script>
-<script src="http://matthew.wagerfield.com/parallax/deploy/jquery.parallax.js"></script>
+
+<script src="https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/js/libraries.min.js"></script>
+<script src="https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/js/jquery.parallax.js"></script>
 <script>
     $(document).ready(function () {
         // jQuery Selections
