--- a/_posts/matlab/basic_shapes/2016-03-21-matlab-basic-shapes.html
+++ b/_posts/matlab/basic_shapes/2016-03-21-matlab-basic-shapes.html
@@ -1,7 +1,7 @@
 ---
 title: MATLAB Basic Shapes | Examples | Plotly
 name: Basic Shapes
-permalink: matlab/basic-shapes
+permalink: matlab/basic-shapes/
 description: How to make a Basic Shapes in MATLAB. Examples of different shapes.
 layout: base
 thumbnail: thumbnail/basic_shapes.jpg
