Added thumbnail for basic shapes

--- a/_posts/matlab/basic_shapes/2016-03-21-matlab-basic-shapes.html
+++ b/_posts/matlab/basic_shapes/2016-03-21-matlab-basic-shapes.html
@@ -4,7 +4,7 @@ name: Basic Shapes
 permalink: matlab/basic-shapes/
 description: How to make a Basic Shapes in MATLAB. Examples of different shapes.
 layout: base
-thumbnail: thumbnail/basic_shapes.jpg
+thumbnail: thumbnail/shape.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
