Fixed Trisurf examples

--- a/_posts/plotly_js/trisurf/2016-02-29-trisurf-basic.html
+++ b/_posts/plotly_js/trisurf/2016-02-29-trisurf-basic.html
@@ -2,7 +2,7 @@
 name: Basic Trisurf Plot
 plot_url: https://codepen.io/plotly/embed/MyWMYm/?height=604&theme-id=15263&default-tab=result
 language: plotly_js
-suite: 3d-line
+suite: trisurf
 order: 0
 sitemap: false
 arrangement: horizontal
