--- a/_posts/plotly_js/trisurf/2016-02-29-trisurf_plotly_js_index.html
+++ b/_posts/plotly_js/trisurf/2016-02-29-trisurf_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Trisurf Plots | Examples | Plotly
 name: Tri-Surf Plots
-permalink: javascript/trisurf
+permalink: javascript/trisurf/
 description: How to make Trisurf in javascript.
 layout: base
 thumbnail: thumbnail/trisurf.jpg
@@ -10,5 +10,5 @@ page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
 ---
-{% assign examples = site.posts | where:"language","plotly_js" | where:"suite","3d-line" | sort: "order" %}
+{% assign examples = site.posts | where:"language","plotly_js" | where:"suite","trisurf" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
