updated some sections

--- a/_posts/user_guide_python/2015-06-30-new_py_guide.html
+++ b/_posts/user_guide_python/2015-06-30-new_py_guide.html
@@ -51,7 +51,7 @@ title: Getting Started Plotly for Python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="What-is-Plotly?:">What is Plotly?:<a class="anchor-link" href="#What-is-Plotly?:">&#182;</a></h3><p>Plotly at its core is a data visualization toolbox. Under every plotly graph is a JSON, a dictionary like data structure, and simply by changing the values of some keywords, we can get vastly different and ever more detailed plots. For example:</p>
+<h3 id="What-is-Plotly?:">What is Plotly?:<a class="anchor-link" href="#What-is-Plotly?:">&#182;</a></h3><p>Plotly at its core is a data visualization toolbox. Under every plotly graph is a JSON (a dictionary-like data structure), and simply by changing the values of some keywords, we can get vastly different and ever more detailed plots. Below we'll see an example of a plot, and its underlying JSON representation:</p>
 
 </div>
 </div>
@@ -428,7 +428,7 @@ Hence,</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>From viewing the outputs of these functions, we can see that they are just lists or dictionaries. But they're a little more than that, though they do inherit properties from dictionaries (traces, and layout) and lists (figure), they provide a bit more functionality as we'll see. Not to mention the fact that it's much simpler to create plots in this functional fashion compared to manually writing up a dictionary.</p>
+<p>From viewing the outputs of these functions, we can see that they are just lists or dictionaries. But they're a little more than that. Though they do inherit properties from dictionaries (traces, and layout) and lists (figure), they provide a bit more functionality as we'll see. Not to mention the fact that it's much simpler to create plots in this functional fashion compared to manually writing up a dictionary.</p>
 
 </div>
 </div>
@@ -438,7 +438,7 @@ Hence,</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>They offer ways to update</p>
+<p>Graph objects allow us</p>
 
 </div>
 </div>
@@ -499,6 +499,38 @@ Hence,</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Issues-and-Questions">Issues and Questions<a class="anchor-link" href="#Issues-and-Questions">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>So you've developed a better understanding of Plotly now, and you're starting to create cooler plots and visualizations for different projects you're working on. If you ever happen to get stuck wtih certain use cases or features in Plotly, you can let us know at our <strong><a href="http://community.plot.ly">Community Forums</a></strong>. Moreover if you sign up for a Pro Plan, we also offer e-mail and intercom support as well. Finally if you think you've caught a bug or if something just doesn't function the way it should, you can create an issue on our <strong><a href="https://github.com/plotly/plotly.py/issues">Github Repo</a></strong>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+
 </div>
 </div>
 </div>{% endraw %}
