--- a/_posts/python/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/python/callbacks-sliders/2015-04-09-sliders_index.html
@@ -1,8 +1,8 @@
 ---
 title: Adding Sliders to Python Charts | Examples | Plotly
 name: Adding Sliders to Charts
-permalink: python/range-slider/
-description: How to add sliders to Python charts with JavaScript 
+permalink: python/range-slider-with-javascript/
+description: How to add sliders to Python charts with JavaScript
 layout: base
 thumbnail: thumbnail/sliders.jpg
 language: python
