--- a/_posts/python/callbacks-sliders/2015-04-09-sliders-bind.html
+++ b/_posts/python/callbacks-sliders/2015-04-09-sliders-bind.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 name: Adding Custom Sliders
 plot_url: https://codepen.io/plotly/embed/pJqNLe/?height=735&theme-id=15263&default-tab=result
 height: 800
@@ -15,4 +15,4 @@ df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2014_
 df.head()
 trace = go.Scatter( x=df['AAPL_x'], y=df['AAPL_y'], mode='markers', marker=dict(size=4) )
 data = [trace]
-url = py.plot(data, filename='line-scatter-aapl')
+url = py.plot(data, filename='line-scatter-aapl') -->
