--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -3,7 +3,7 @@ permalink: python/range-slider
 description: Create graphs with range sliders and range selectors in Python with Plotly.
 title: Python Range Slider and Selectors | plotly
 has_thumbnail: true
-thumbnail: /images/range.png
+thumbnail: /images/sliders.png
 layout: user-guide
 name: Range Slider and Selector
 language: python
