--- a/_posts/python/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/python/callbacks-sliders/2015-04-09-sliders_index.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: Adding Sliders to Python Charts | Examples | Plotly
 name: Adding Sliders to Charts
 permalink: python/range-slider-with-javascript/
@@ -12,4 +12,4 @@ display_as: chart_events
 order: 20
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","slider-events" | sort: "order" %}
-{% include auto_examples.html examples=examples %}
+{% include auto_examples.html examples=examples %} -->
