Renamed trisurf example files, slight fix in text

--- a/_posts/matplotlib/trisurf/2015-06-30-trisurf-matplotlib.html
+++ b/_posts/matplotlib/trisurf/2015-06-30-trisurf-matplotlib.html
@@ -1,12 +1,12 @@
 ---
-permalink: python/trisurf/
-description: How to make Tri-Surf plots in Python with Plotly.
-title: Python Tri-Surf Plots | plotly
+permalink: matplotlib/trisurf/
+description: How to make Tri-Surf plots using matplotlib in Plotly.
+title: Matplotlib Tri-Surf Plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/trisurf.jpg
 layout: user-guide
 name: Tri-Surf Plots
-language: python
+language: matplotlib
 display_as: 3d_charts
 has_thumbnail: true
 page_type: example_index
@@ -431,7 +431,7 @@ Each row in this array contains  three indices,  i, j, k, such that points2D[i,:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Triangularization-of-the-surface-$z=\sin(-xy)$,-defined-over-a-disk">Triangularization of the surface $z=\sin(-xy)$, defined over a disk<a class="anchor-link" href="#Triangularization-of-the-surface-$z=\sin(-xy)$,-defined-over-a-disk">&#182;</a></h3>
+<h3 id="Triangularization-of-the-surface-$z=\sin(-xy)$,-defined-over-a-disk">Triangularization of the surface  $z=\sin(-xy)$, defined over a disk<a class="anchor-link" href="#Triangularization-of-the-surface-$z=\sin(-xy)$,-defined-over-a-disk">&#182;</a></h3>
 </div>
 </div>
 </div>
