Fixes #357 and #358 partially

--- a/_posts/plotly_js/callbacks-click/2015-04-09-click-annotation.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click-annotation.html
@@ -8,5 +8,6 @@ sitemap: false
 height: 650
 order: 1
 ---
-<p>Create or remove an annotation when clicking on a point.</p>
+
+// Create or remove an annotation when clicking on a point.
 <a href="https://plot.ly/javascript-graphing-library/range-slider/">JavaScript code for this example in the Plotly.js Showcase</a>
