--- a/_posts/plotly_js/callbacks-click/2015-04-09-click.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click.html
@@ -23,7 +23,7 @@ Plotly.newPlot('myDiv', data, layout);
 
 myPlot.on('plotly_click', function(data){
     var pts = '';
-    for(var i=0; i<data.points.length; i++){
+    for(var i=0; i &lt; data.points.length; i++){
         pts = 'x = '+data.points[i].x +'\ny = '+
             data.points[i].y.toPrecision(4) + '\n\n';
     }
