Added ternary plots examples

--- a/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
+++ b/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Range Sliders
 permalink: javascript/range-slider/
 description: How to add range sliders to a D3.js-based line or scatter chart. Examples of Range Sliders
 layout: base
-thumbnail: thumbnail/range-slider.jpg
+thumbnail: thumbnail/sliders.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
