Updated `name` in Range Slider example

--- a/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
+++ b/_posts/plotly_js/range-slider/2016-04-04-range-slider_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 title: Javascript Graphing Library D3.js-based Range Sliders | Examples | Plotly
-name: Range Sliders
+name: Range Slider and Selector
 permalink: javascript/range-slider/
 description: How to add range sliders to a D3.js-based line or scatter chart. Examples of Range Sliders
 layout: base
