Removed extra 'in Python' in generated title

--- a/python/getting-started/index.html
+++ b/python/getting-started/index.html
@@ -307,7 +307,7 @@
 						<div class="--body">
 							
 							<h1>
-								Getting Started Plotly for Python in Python
+								Getting Started Plotly for Python
 							</h1>
 							<p>Getting Started with Plotly for Python. </p>
 
