Add Scala to list of APIs.

--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -153,6 +153,7 @@ permalink: /api/
                     <ul>
                         <li><a href="/matlab/" class="button no_underline centeredsmall">MATLAB</a></li>
                         <li><a href="/julia/" class="button no_underline centeredsmall">Julia</a></li>
+                        <li><a href="/scala/" class="button no_underline centeredsmall">Scala</a></li>
                         <li><a href="https://github.com/plotly/Igor-Pro-Graph-Converter"
                                class="button no_underline centeredsmall">Igor Pro</a></li>
                         <li><a href="https://github.com/plotly/spotfire"
