--- a/_posts/python/ternary/2015-06-30-ternary.html
+++ b/_posts/python/ternary/2015-06-30-ternary.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/ternary-plots
+permalink: python/ternary-plots/
 description: How to make Ternary plots in Python with Plotly.
 title: Python Ternary Plots | plotly
 has_thumbnail: true
